cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_14.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/idea/i_cbc.c:49: error: DEAD_STORE
  The value written to &out (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/idea/i_cbc.c:49:13: Write of unused value
47.               l2n(tout0, out);
48.               tout1 = tin[1];
49.               l2n(tout1, out);
                  ^
50.           }
51.           l2n(tout0, iv);
